# xlog

./: .gitignore  README.MD  README.md  build.gradle  config.gradle  gradle.properties  publish.gradle  settings.gradle  test
flushwriter/: CMakeLists.txt  build.gradle
flushwriter/src/main/: AndroidManifest.xml
flushwriter/src/main/cpp/: Flushwriter.cpp  LogBuffer.cpp  LogBufferHeader.cpp
flushwriter/src/main/cpp/includes/: AsyncFileFlush.h  LogBuffer.h  LogBufferHeader.h
flushwriter/src/main/java/com/salton123/io/: FlushWriter.java
gradle/wrapper/: gradle-wrapper.properties
mmap-writer/: CMakeLists.txt  build.gradle
mmap-writer/src/androidTest/java/com/salton123/writer/: ExampleInstrumentedTest.kt
mmap-writer/src/main/: AndroidManifest.xml
mmap-writer/src/main/cpp/: AsyncFileFlush.cpp  BufferFlusher.cpp  BufferTrigger.cpp  CMakeLists.txt  FileAsyncFlusher.cpp  FileBuffer.cpp  FileDifferential.cpp  FileFlusher.cpp  FlushBuffer.cpp  LogBuffer.cpp  LogBufferHeader.cpp  MetaData.cpp  Metadata.cpp  MmapBuffer.cpp  MmapBuffer.h  MmapTrigger.cpp  MmapWriter.cpp  log4a-lib.cpp
mmap-writer/src/main/cpp/includes/: AsyncFileFlush.h  BufferFlusher.h  BufferTrigger.h  FileAsyncFlusher.h  FileBuffer.h  FileDifferential.h  FileFlusher.h  FlushBuffer.h  LogBuffer.h  LogBufferHeader.h  MetaData.h  Metadata.h  MmapBuffer.h  MmapFlusher.h  MmapTrigger.h  MmapWriter.h
mmap-writer/src/main/java/com/salton123/writer/: MmapWriter.kt
mmap-writer/src/test/java/com/salton123/writer/: ExampleUnitTest.kt
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/salton123/xlog/demo/: MainActivity.kt  PermissionsUtil.java  Test.java  XLogSampleApplication.java
sample/src/main/res/layout/: activity_main.xml  aty_main.xml
xlog/: build.gradle  deployBintray.gradle
xlog/src/main/: AndroidManifest.xml
xlog/src/main/java/com/salton123/log/: LogConfig.kt  Utils.java  Utils.kt  XLog.java  XLog.kt  XLogConfig.java  XLogConfig.kt
xlog/src/main/java/com/salton123/log/printer/: FilePrinter.java  FilePrinter.kt  Printer.java  Printer.kt
